# Lythea-Reasoning-Agent

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  RELEASE_NOTES_v5.8.0.md  TESTS_IN_VIVO.md  TESTS_IN_VIVO_V5_5_X.md  deploy.sh  ingest.py  launch.sh  pyproject.toml  run.py  test.sh
agentic/: __init__.py  orchestrator.py  tools.py  workers.py
cognition/: cascade.py  mcp_integration.py  predictive_coding.py  reflection.py  semantic_router.py  storage.py  vision_active.py
lythea/: __init__.py  __main__.py  boot.py  config.py  genlock.py  git_sync.py  hippocampe.py  model.py  sessions.py  settings.py  telegram_bot.py  web.py
lythea/agentic/: orchestrator.py
lythea/cognition/: consolidation.py  deep_reasoning.py  deliberation.py  encoding.py  generation.py  metacognition.py  retrieval.py  storage.py  surprise.py  timeline.py
lythea/mcp/: server_manager.py
lythea/memory/: kg.py  mhn.py  retrieval.py  salience.py  sdm.py
lythea/server/: app.py  codegen.py  document_ingest.py  rate_limit.py  routes.py
lythea/server/static/: app.js  index.html  style.css
lythea/steering/: __init__.py  engine.py
lythea/web_providers/: __init__.py  brave.py  ddg.py  factory.py  searxng.py  serper.py  tavily.py
tests/: test_agentic.py  test_api.py  test_auth.py  test_blackboard.py  test_blockage.py  test_boot.py  test_cache.py  test_cascade.py  test_cascade_integration.py  test_codegen.py  test_cognitive_state.py  test_config_endpoints.py  test_consolidation.py  test_cross_encoder.py  test_deep_reasoning.py  test_deliberation.py  test_encoding.py  test_gemini_client.py  test_generation.py  test_git_sync.py  test_hippocampe.py  test_hippocampe_v4.py  test_hwprofile.py  test_ingest.py  test_inhibition.py  test_kg.py  test_kg_critical.py  test_kg_improved.py  test_loadability.py  test_memory_health.py  test_metacognition.py  test_mhn.py  test_microsleep.py  test_microsleep_v41.py  test_planning.py  test_predictive_coding.py  test_procedural_memory.py  test_progress.py  test_prompt_coherence.py  test_reflection.py  (+26 more)
